<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/alert_def_padding"
    android:paddingTop="@dimen/alert_def_padding"
    android:paddingRight="@dimen/alert_def_padding"
    android:paddingBottom="@dimen/alert_def_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assignment_name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assignment_add_new_name_hint">

        <EditText
            android:id="@+id/assignment_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/assignment_date_label"
            style="@style/primarySubheadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/assignment_add_new_due" />


        <com.slensky.focussis.views.AlignmentAwareTextInputLayout
            android:id="@+id/assignment_date_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/assignment_date_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/assignment_add_new_due_hint"
                android:inputType="date" />

        </com.slensky.focussis.views.AlignmentAwareTextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/assignment_category_label"
            style="@style/primarySubheadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/assignment_add_new_category" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assignment_description_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/assignment_description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assignment_add_new_description_hint"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>