<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_reporter_name"
        style="@style/primaryBoldBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="0.25"
        android:text="@string/referrals_name_header" />

    <TextView
        android:id="@+id/text_entry_date"
        style="@style/primaryBoldBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="0.15"
        android:text="@string/referrals_entry_date_header" />

    <TextView
        android:id="@+id/text_violation"
        style="@style/primaryBoldBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="0.6"
        android:text="@string/referrals_violation_header" />

    <!--<TextView
        android:id="@+id/text_other_violation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/referrals_other_violation_header"
        style="@style/primaryBoldBodyText" />-->

</TableRow>