<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp">

                <LinearLayout xmlns:custom="http://schemas.android.com/apk/res/com.slensky.focussis"
                    android:id="@+id/ll_basic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:hint="@string/demographic_name_hint"
                        custom:icon="@drawable/ic_person_black_24px" />

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:hint="@string/demographic_dob_hint"
                        custom:icon="@drawable/ic_cake_variant_black_24px" />

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:hint="@string/demographic_email_hint"
                        custom:icon="@drawable/ic_email_black_24px" />-->

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_grade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:hint="@string/demographic_grade_hint"
                        custom:icon="@drawable/ic_calendar_text_black_24px" />

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_student_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/demographic_student_id_hint"
                        app:icon="@drawable/ic_account_card_details_black_24px" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_detailed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp">

                <LinearLayout xmlns:custom="http://schemas.android.com/apk/res/com.slensky.focussis"
                    android:id="@+id/ll_detailed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider"
                    android:orientation="vertical"
                    android:showDividers="middle">


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>