<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_search_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/room_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search"
                android:hint="@string/map_search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                android:id="@+id/image_school_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

            <TextView
                style="@style/secondaryBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_school_map"
                android:layout_alignParentEnd="true"
                android:drawableLeft="@drawable/ic_zoom_out_map_24px"
                android:drawablePadding="4dp"
                android:paddingLeft="16dp"
                android:paddingTop="6dp"
                android:paddingRight="16dp"
                android:text="@string/pinch_to_zoom"
                android:textStyle="italic" />

        </RelativeLayout>

        <TextView
            style="@style/primaryHeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/bell_schedule"
            android:textColor="#009688" />

        <Spinner
            android:id="@+id/spinner_bell_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp" />

        <HorizontalScrollView
            android:id="@+id/scrollview_bell_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fillViewport="true">

        </HorizontalScrollView>

    </LinearLayout>

</ScrollView>