<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-70dp"
            android:orientation="vertical"
            android:paddingLeft="48dp"
            android:paddingTop="16dp"
            android:paddingRight="48dp"
            android:paddingBottom="32dp">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="363dp"
                android:layout_height="173dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/smartlibrary" />


            <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
            to prevent the dummy from receiving focus again -->
            <AutoCompleteTextView
                android:id="@+id/autotext"
                android:layout_width="0px"
                android:layout_height="0px"
                android:nextFocusLeft="@id/autotext"
                android:nextFocusUp="@id/autotext" />

            <!-- Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_logo"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/login_user_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_layout_email"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/login_pass_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/check_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_layout_password"
                android:text="@string/login_remember_user" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/check_remember"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:onClick="loginUser"
                android:padding="12dp"
                android:text="@string/login_button" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>